; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_metadata_utility.c_InsertIntoPgDistPartition.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_metadata_utility.c_InsertIntoPgDistPartition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Natts_pg_dist_partition = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@Anum_pg_dist_partition_logicalrelid = common dso_local global i32 0, align 4
@Anum_pg_dist_partition_partmethod = common dso_local global i32 0, align 4
@Anum_pg_dist_partition_colocationid = common dso_local global i32 0, align 4
@Anum_pg_dist_partition_repmodel = common dso_local global i32 0, align 4
@DISTRIBUTE_BY_NONE = common dso_local global i8 0, align 1
@Anum_pg_dist_partition_partkey = common dso_local global i32 0, align 4
@NoLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InsertIntoPgDistPartition(i32 %0, i8 signext %1, i32* %2, i32 %3, i8 signext %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8, align 1
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i8 %1, i8* %7, align 1
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8 %4, i8* %10, align 1
  store i32* null, i32** %11, align 8
  store i8* null, i8** %12, align 8
  store i32* null, i32** %13, align 8
  %17 = load i32, i32* @Natts_pg_dist_partition, align 4
  %18 = zext i32 %17 to i64
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %14, align 8
  %20 = alloca i32, i64 %18, align 16
  store i64 %18, i64* %15, align 8
  %21 = load i32, i32* @Natts_pg_dist_partition, align 4
  %22 = zext i32 %21 to i64
  %23 = alloca i32, i64 %22, align 16
  store i64 %22, i64* %16, align 8
  %24 = call i32 (...) @DistPartitionRelationId()
  %25 = load i32, i32* @RowExclusiveLock, align 4
  %26 = call i32* @heap_open(i32 %24, i32 %25)
  store i32* %26, i32** %11, align 8
  %27 = mul nuw i64 4, %18
  %28 = trunc i64 %27 to i32
  %29 = call i32 @memset(i32* %20, i32 0, i32 %28)
  %30 = mul nuw i64 4, %22
  %31 = trunc i64 %30 to i32
  %32 = call i32 @memset(i32* %23, i32 0, i32 %31)
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @ObjectIdGetDatum(i32 %33)
  %35 = load i32, i32* @Anum_pg_dist_partition_logicalrelid, align 4
  %36 = sub nsw i32 %35, 1
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %20, i64 %37
  store i32 %34, i32* %38, align 4
  %39 = load i8, i8* %7, align 1
  %40 = call i32 @CharGetDatum(i8 signext %39)
  %41 = load i32, i32* @Anum_pg_dist_partition_partmethod, align 4
  %42 = sub nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %20, i64 %43
  store i32 %40, i32* %44, align 4
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @UInt32GetDatum(i32 %45)
  %47 = load i32, i32* @Anum_pg_dist_partition_colocationid, align 4
  %48 = sub nsw i32 %47, 1
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i32, i32* %20, i64 %49
  store i32 %46, i32* %50, align 4
  %51 = load i8, i8* %10, align 1
  %52 = call i32 @CharGetDatum(i8 signext %51)
  %53 = load i32, i32* @Anum_pg_dist_partition_repmodel, align 4
  %54 = sub nsw i32 %53, 1
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i32, i32* %20, i64 %55
  store i32 %52, i32* %56, align 4
  %57 = load i8, i8* %7, align 1
  %58 = sext i8 %57 to i32
  %59 = load i8, i8* @DISTRIBUTE_BY_NONE, align 1
  %60 = sext i8 %59 to i32
  %61 = icmp ne i32 %58, %60
  br i1 %61, label %62, label %71

62:                                               ; preds = %5
  %63 = load i32*, i32** %8, align 8
  %64 = call i8* @nodeToString(i32* %63)
  store i8* %64, i8** %12, align 8
  %65 = load i8*, i8** %12, align 8
  %66 = call i32 @CStringGetTextDatum(i8* %65)
  %67 = load i32, i32* @Anum_pg_dist_partition_partkey, align 4
  %68 = sub nsw i32 %67, 1
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds i32, i32* %20, i64 %69
  store i32 %66, i32* %70, align 4
  br label %81

71:                                               ; preds = %5
  %72 = call i32 @PointerGetDatum(i32* null)
  %73 = load i32, i32* @Anum_pg_dist_partition_partkey, align 4
  %74 = sub nsw i32 %73, 1
  %75 = sext i32 %74 to i64
  %76 = getelementptr inbounds i32, i32* %20, i64 %75
  store i32 %72, i32* %76, align 4
  %77 = load i32, i32* @Anum_pg_dist_partition_partkey, align 4
  %78 = sub nsw i32 %77, 1
  %79 = sext i32 %78 to i64
  %80 = getelementptr inbounds i32, i32* %23, i64 %79
  store i32 1, i32* %80, align 4
  br label %81

81:                                               ; preds = %71, %62
  %82 = load i32*, i32** %11, align 8
  %83 = call i32 @RelationGetDescr(i32* %82)
  %84 = call i32* @heap_form_tuple(i32 %83, i32* %20, i32* %23)
  store i32* %84, i32** %13, align 8
  %85 = load i32*, i32** %11, align 8
  %86 = load i32*, i32** %13, align 8
  %87 = call i32 @CatalogTupleInsert(i32* %85, i32* %86)
  %88 = load i32, i32* %6, align 4
  %89 = call i32 @CitusInvalidateRelcacheByRelid(i32 %88)
  %90 = load i32, i32* %6, align 4
  %91 = load i32*, i32** %8, align 8
  %92 = call i32 @RecordDistributedRelationDependencies(i32 %90, i32* %91)
  %93 = call i32 (...) @CommandCounterIncrement()
  %94 = load i32*, i32** %11, align 8
  %95 = load i32, i32* @NoLock, align 4
  %96 = call i32 @heap_close(i32* %94, i32 %95)
  %97 = load i8*, i8** %14, align 8
  call void @llvm.stackrestore(i8* %97)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32* @heap_open(i32, i32) #2

declare dso_local i32 @DistPartitionRelationId(...) #2

declare dso_local i32 @memset(i32*, i32, i32) #2

declare dso_local i32 @ObjectIdGetDatum(i32) #2

declare dso_local i32 @CharGetDatum(i8 signext) #2

declare dso_local i32 @UInt32GetDatum(i32) #2

declare dso_local i8* @nodeToString(i32*) #2

declare dso_local i32 @CStringGetTextDatum(i8*) #2

declare dso_local i32 @PointerGetDatum(i32*) #2

declare dso_local i32* @heap_form_tuple(i32, i32*, i32*) #2

declare dso_local i32 @RelationGetDescr(i32*) #2

declare dso_local i32 @CatalogTupleInsert(i32*, i32*) #2

declare dso_local i32 @CitusInvalidateRelcacheByRelid(i32) #2

declare dso_local i32 @RecordDistributedRelationDependencies(i32, i32*) #2

declare dso_local i32 @CommandCounterIncrement(...) #2

declare dso_local i32 @heap_close(i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
